[tool.poetry]
name = "btcamp-dbt"
version = "0.1.0"
description = ""
authors = ["Samuel Lima <osamuellimaesilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
